--- a/vladwebtest/Jenkinsfile
+++ b/vladwebtest/Jenkinsfile
@@ -254,8 +254,8 @@ def notifyBuild(String buildStatus = 'STARTED', String step= 'BUILD', String par
   } else {
     	emailext (
 	      subject: subject,
-	      body: details+"\n "+GetRecepients(branch),
-	      recipientProviders: [[$class: 'RequesterRecipientProvider']]
+	      body: details
+	      recipientProviders: recepient_list
 	    )
   }
 }
